# python-basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: README.md
homework_05/: app.py
homework_05/static/css/: homepage.css  style.css
homework_05/templates/: about.html  base.html  index.html
homework_06/: docker-compose.yaml
homework_06/app/: app.py  main.py
homework_06/app/templates/: base.html
homework_django-toolbar/animals/management/commands/: fill_db.py
